[package]
name = "porkbun-rs"
version = "0.1.0"
authors = [
  "Rodrigo Sanabria <krosf@muchobien.dev>",
  "Kevin López <lokeon@muchobien.dev>",
]
edition = "2018"
description = "Porkbun API client"
repository = "https://github.com/muchobien/porkbun-rs"
readme = "README.md"
license = "MIT"
keywords = ["porkbun", "api", "client"]
categories = ["web-programming::http-client", "api-bindings"]

[features]
default = ["client_api"]
client_api = ["async-trait", "thiserror", "reqwest", "futures-util", "itertools"]


[dependencies]
async-trait = { version = "~0.1", optional = true }
reqwest = { version = "~0.11.0", features = ["blocking", "json"], optional = true }
thiserror = { version = "^1.0.25", optional = true }
futures-util = { version = "0.3.15", default-features = false, optional = true }
itertools = { version = "~0.10", optional = true }

bytes = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
http = "~0.2"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.2"
log = "~0.4.14"
derive_builder = "~0.10"

[dev-dependencies]
itertools = { version = "~0.10" }
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
eyre = "0.6"
